src/objects/Product_Gurantee__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GuaranteeType__c</fullName>
        <label>GuaranteeType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantee__c</fullName>
        <label>Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modality__c</fullName>
        <label>Modality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product_Gurantees</relationshipLabel>
        <relationshipName>Product_Gurantees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodicity__c</fullName>
        <label>Periodicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product_Gurantees</relationshipLabel>
        <relationshipName>Product_Gurantees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMaster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nGuarantee__c</fullName>
        <label>nGuarantee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id_c__c</fullName>
        <displayFormat>PG{00000}</displayFormat>
        <label>unique_id__c</label>
        <type>AutoNumber</type>
    </fields>
    <label>Product_Gurantee</label>
    <nameField>
        <label>Nombre de Product_Gurantee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_Gurantees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>